social links added

--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f">Linkedin</i><img alt="in-logo" src="assets/img/social/linkedin.png"></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter">Codeforces</i><img alt="cf-logo" src="assets/img/social/codeforces.png"></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://linkedin.com/in/rohan-bhandari-918142184"><i class="fab fa-fw fa-facebook-f">Linkedin</i><img alt="in-logo" src="assets/img/social/linkedin.png"></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://codeforces.com/profile/naruhodou"><i class="fab fa-fw fa-twitter">Codeforces</i><img alt="cf-logo" src="assets/img/social/codeforces.png"></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About Freelancer</h4>
                         <p class="lead mb-0">
-                            Freelance is a free to use, MIT licensed Bootstrap theme created by
+                            The website was created using Freelance. Freelance is a free to use, MIT licensed Bootstrap theme created by
                             <a href="http://startbootstrap.com">Start Bootstrap</a>
                             .
                         </p>
