--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://linkedin.com/in/rohan-bhandari-918142184"><i class="fab fa-fw fa-facebook-f">Linkedin</i><img alt="in-logo" src="assets/img/social/linkedin.png"></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://codeforces.com/profile/naruhodou"><i class="fab fa-fw fa-twitter">Codeforces</i><img alt="cf-logo" src="assets/img/social/codeforces.png"></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://linkedin.com/in/rohan-bhandari-918142184"><img alt="in-logo" src="assets/img/social/linkedin.png"></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://codeforces.com/profile/naruhodou"><img alt="cf-logo" src="assets/img/social/codeforces.png"></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
@@ -178,7 +178,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © Your Website 2020</small></div>
+            <div class="container"><small>Copyright © Rohan Bhandari 2020</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
