first draft almost done

--- a/index.html
+++ b/index.html
@@ -133,15 +133,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
-                </div>
-                <!-- About Section Button-->
-                <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
-                        <i class="fas fa-download mr-2"></i>
-                        Free Download!
-                    </a>
+                    <div class="col-lg-4 ml-auto"><p class="lead">I am Rohan Bhandari, a final year computer science undergrad at IIIT-H. I have good data structure and algorithms skills, and have been an active particpant on various competition platforms like codeforces, ACM-ICPC, Google Kickstart, Facebook Hacker Cup, etc.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">I have worked at Motorq, LLC as a software development intern. I like working on challenging problems and come up with innovative solutions. I am actively looking for job offers, and want to add value as an employee. I am looking for software engineering based roles, but I am open to learn new skills.</p></div>
                 </div>
             </div>
         </section>
@@ -161,8 +154,9 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-3" href="https://linkedin.com/in/rohan-bhandari-918142184"><img class="img-fluid rounded mb-0" alt="in-logo" src="assets/img/social/linkedin.png"></a>
-                        <a class="btn btn-outline-light btn-social mx-3" href="https://codeforces.com/profile/naruhodou"><img class="img-fluid rounded mb-0" alt="cf-logo" src="assets/img/social/codeforces.png"></a>
+                        <a class="btn btn-outline-light btn-social mx-3" href="https://linkedin.com/in/rohan-bhandari-918142184"><img class="img-fluid rounded" alt="in-logo" src="assets/img/social/linkedin.png"></a>
+                        <a class="btn btn-outline-light btn-social mx-3" href="https://codeforces.com/profile/naruhodou"><img class="img-fluid rounded" alt="cf-logo" src="assets/img/social/codeforces.png"></a>
+                        <a class="btn btn-outline-light btn-social mx-3" href="https://github.com/naruhodou"><img class="img-fluid rounded" alt="cf-logo" src="assets/img/social/github.png"></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
@@ -197,7 +191,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Log Cabin</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">SDE Internship</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -207,7 +201,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/motorq.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">I joined Motorq as a <em>Software Engineering Intern</em> in summer 2020. I worked on a variety of platforms like nodejs, snowflake & snowpipe, python, rasa api, flask, etc. The experience was one of a kind being the first generation of intern working in a virtual setting post covid pandemic</p>
+                                    <p class="mb-5">I joined Motorq as a <em>Software Engineering Intern</em> in summer 2020. I worked on a variety of platforms like nodejs, snowflake & snowpipe, python, rasa api, flask, etc. The experience was one of a kind being the first generation of interns working in a virtual setting post covid pandemic.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -231,7 +225,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Tasty Cake</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Competitive Programming</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -241,7 +235,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/programmer.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">I enjoy solving problems on data structures and algorithms on various coding platforms like codeforces, atcoder, codechef, etc. I have solved 1000+ problems across all platforms. I have secured global ranks of 37 and 43 in 2 hours long codeforces contests.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -265,7 +259,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Circus Tent</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Machine Learning</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -275,7 +269,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ml.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">I worked on attention based transformer models to solve mathematical problems from various domains like calculus, algebra, set theory, matrices, arithmetic, etc. We worked on improving the accuracy of math problems on the dataset provided by Google DeepMind by using word based tokenization. We created datasets apart from the Google DeepMind ones on integration, differential equation, etc using symbolic python.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -299,7 +293,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Controller</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">ACM ICPC</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -307,9 +301,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/icpc.jpg" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/icpcr.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">I participated and qualified for ACM ICPC regionals in 2019 with the help of my capable teammates securing 209 rank among 3000+ teams in the online round. ACM ICPC is the olympics for competitive programmers round the globe, and I was fortunate enough to study in a college that has a culture that promotes the participation of students in ACM ICPC in large numbers.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -333,7 +327,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Locked Safe</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Google Kickstart</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -343,7 +337,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/kickstart.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">The year 2020 has been a better year in terms of my performance consistency in the Google kickstart competitions. I have secured ranks 434, 882, 955 and 1339 in the google kickstart competitions I participated in. Google kickstart witnesses almost 8000+ participants globally.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -367,7 +361,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Submarine</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">My college: IIIT-H</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -377,7 +371,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/iiith.jpg" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-5">I am a final year <em>Computer Science</em> undergraduate at IIIT Hyderabad, one of the best research institutes in India. I have done courses on Data Structures and Algorithms, Machine Learning and AI, Data Analytics, Operating Systems, to name a few. The assignments are challenging to solve and require good knowledge of concepts beyond classroom.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
