--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">I am Rohan Bhandari, a final year computer science undergrad at IIIT-H. I have good data structure and algorithms skills, and have been an active particpant on various competition platforms like codeforces, ACM-ICPC, Google Kickstart, Facebook Hacker Cup, etc.</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">I am Rohan Bhandari, a final year computer science undergrad at IIIT-H. I have good data structure and algorithms skills, and have been an active participant on various competition platforms like codeforces, ACM-ICPC, Google Kickstart, Facebook Hacker Cup, etc.</p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">I have worked at Motorq, LLC as a software development intern. I like working on challenging problems and come up with innovative solutions. I am actively looking for job offers, and want to add value as an employee. I am looking for software engineering based roles, but I am open to learn new skills.</p></div>
                 </div>
             </div>
